# faculty-bot

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.json  docker-compose.yml  docker_db.yml
.github/workflows/: release-master.yml
i18n/: de.json  en.json  ja.json
migrations/2021-11-28-183828_semestermoderatoren/: down.sql  up.sql
migrations/2021-11-28-183836_levels/: down.sql  up.sql
migrations/2021-11-28-184212_verification/: down.sql  up.sql
scripts/: build-config.mjs
src/: config.rs  database.rs  eventhandler.rs  main.rs  structs.rs  tasks.rs  utils.rs
src/commands/: administration.rs  help.rs  levels.rs  mod.rs  moderation.rs  user.rs
src/web/: auth.rs  mod.rs  structs.rs
src/web/api/: mod.rs
templates/: 401.html.hbs  404.html.hbs  admin.html.hbs  discord_callback.html.hbs  home.html.hbs  login.html.hbs  logout.html.hbs  noAccess.html.hbs  reverify.html.hbs  setup.html.hbs  switch-account.html.hbs  verification_email.html  verify.html.hbs  wip.html.hbs
templates/partials/: futa.html.hbs  head.html.hbs
